--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,4 @@
 os: linux
 dist: bionic
+before_script: apt install live-build pbuilder devscripts python3-pystache python3-git
 script: ./configure && make iso
